# Rexum

./: .gitignore  package.json  pnpm-lock.yaml
app/: root.tsx
app/routes/: _index.tsx  login.tsx  signup.tsx
backend/: Cargo.toml  Example.env
backend/.sqlx/: query-1d26b0175522c0795bcbacdaaa9b93ad89ae942453cc31a52e90c6c67ff0683d.json
backend/queries/: create_user.sql
backend/src/: hashing.rs  main.rs  structs.rs
