[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros"] }
axum-macros = "0.4.0"
rustls = "0.22.2"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
shuttle-axum = "0.36.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls","macros", "mysql", "time" ] }
tokio = {version = "1.35.1", features = ["full"]}

